@@ -119,6 +119,7 @@
 	- assign mips n32 elf32 as color 4.
 	- emit Requires: pkgconfig automagically for pkgs that contain *.pc.
 	- don't create .rpmnew for symlinks.
+	- check digest/readlink iff db and fs file type is same (#194246).
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
